--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^8.1.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "laravel/nova": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -21,6 +22,12 @@
         "publiq/php-cs-fixer-config": "^2.0",
         "spatie/laravel-ignition": "^1.0"
     },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://nova.laravel.com"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "App\\": "app/",
