--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "laravel/laravel",
+    "name": "cultuurnet/publiq-platform",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "description": "Publiq platform",
+    "keywords": ["UDB3", "Publiq"],
     "license": "MIT",
     "require": {
         "php": "^8.1.0",
