--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,9 @@
         }
     },
     "scripts": {
+        "lint": "vendor/bin/php-cs-fixer fix",
+        "test": "php artisan test",
+        "stan": "vendor/bin/phpstan analyse",
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
