--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "format": "prettier --write 'resources/js/**/*.{js,jsx,ts,tsx}'",
+        "format:check": "prettier --check 'resources/js/**/*.{js,jsx,ts,tsx}'"
     },
     "devDependencies": {
         "axios": "^0.27",
