--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,8 @@ WWWGROUP=1000
 WWWUSER=1000
 
 NOVA_LICENSE_KEY=
+
+AUTH0_DOMAIN=account-acc.uitid.be
+AUTH0_CLIENT_ID=
+AUTH0_CLIENT_SECRET=
+AUTH0_REDIRECT_URI=http://localhost/auth/callback
