--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,6 @@ AUTH0_DOMAIN=account-acc.uitid.be
 AUTH0_CLIENT_ID=
 AUTH0_CLIENT_SECRET=
 AUTH0_REDIRECT_URI=http://localhost/auth/callback
+
+INSIGHTLY_HOST=https://api.insight.ly/v3.1/
+INSIGHTLY_API_KEY=
