--- a/phpstan.neon
+++ b/phpstan.neon
@@ -13,3 +13,4 @@ parameters:
         - tests/
     level: 8
     checkGenericClassInNonGenericObjectType: false
+    checkMissingIterableValueType: false
