--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@typescript-eslint/parser": "^5.43.0",
         "axios": "^0.27",
         "eslint": "^8.27.0",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-react": "^7.31.10",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
