--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
         "dev": "vite",
         "build": "vite build",
         "format": "prettier --write 'resources/js/**/*.{js,jsx,ts,tsx}'",
-        "format:check": "prettier --check 'resources/js/**/*.{js,jsx,ts,tsx}'"
+        "format:check": "prettier --check 'resources/js/**/*.{js,jsx,ts,tsx}'",
+        "lint": "eslint --fix 'resources/js/**/*.{js,jsx,ts,tsx}'",
+        "lint:check": "eslint 'resources/js/**/*.{js,jsx,ts,tsx}'"
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
