--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@types/react": "^18.0.25",
         "@typescript-eslint/eslint-plugin": "^5.43.0",
         "@typescript-eslint/parser": "^5.43.0",
         "axios": "^0.27",
