--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/react-dom": "^18.0.9",
         "@typescript-eslint/eslint-plugin": "^5.43.0",
         "@typescript-eslint/parser": "^5.43.0",
+        "autoprefixer": "^10.4.13",
         "axios": "^0.27",
         "eslint": "^8.27.0",
         "eslint-config-prettier": "^8.5.0",
@@ -30,6 +31,7 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "prettier": "2.7.1",
+        "tailwindcss": "^3.2.4",
         "typescript": "4.8.4",
         "vite": "^3.0.0"
     }
