--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,3 +117,37 @@ jobs:
 
       - name: ✅ Run tests
         run: php artisan test
+
+  frontend-format-check:
+    name: Check formatting frontend files
+    runs-on: ubuntu-latest
+    steps:
+      - name: 📤 Checkout project
+        uses: actions/checkout@v2
+
+      - name: 📩 Fetch vendor from cache
+        uses: actions/cache@v1
+        id: cache
+        with:
+          path: vendor
+          key: composer-${{ hashFiles('**/composer.lock') }}
+
+      - name: 🐘 Setup PHP
+        uses: shivammathur/setup-php@master
+        with:
+          php-version: "8.1"
+        env:
+          update: true
+
+      - name: 🔢 Create .env file
+        run: cp .env.ci .env
+
+      - name: 📦 Install composer dependencies
+        run: |
+          composer config "http-basic.nova.laravel.com" "${{ secrets.NOVA_USERNAME }}" "${{ secrets.NOVA_PASSWORD }}"
+          composer install --quiet --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+
+      - name: Install npm dependencies
+        run: vendor/bin/sail npm install
+      - name: Run format check
+        run: vendor/bin/sail npm run format:check
