Add checkout step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,6 +122,8 @@ jobs:
     name: Check formatting frontend files
     runs-on: ubuntu-latest
     steps:
+      - name: 📤 Checkout project
+        uses: actions/checkout@v2
       - uses: actions/setup-node@v3
         with:
           node-version: 16.17
