--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,3 +131,18 @@ jobs:
         run: npm ci
       - name: Run format check
         run: npm run format:check
+
+  frontend-lint-check:
+      name: Check linting frontend files
+      runs-on: ubuntu-latest
+      steps:
+        - name: 📤 Checkout project
+          uses: actions/checkout@v2
+        - uses: actions/setup-node@v3
+          with:
+            node-version: 16.17
+        - name: Install npm dependencies
+          run: npm ci
+        - name: Run lint check
+          run: npm run lint:check
+
