--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
         "@vitejs/plugin-react": "^2.1.0",
+        "i18next": "^22.0.6",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-i18next": "^12.0.0"
     },
     "devDependencies": {
         "@types/react": "^18.0.25",
