--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react-i18next": "^12.0.0"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.3",
         "@types/react": "^18.0.25",
         "@types/react-dom": "^18.0.9",
         "@typescript-eslint/eslint-plugin": "^5.43.0",
