Add Bram and Simon as code owners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @bertramakers @LucWollants @JonasVHG @steftrenson
+* @bertramakers @LucWollants @JonasVHG @steftrenson @brampauwelyn @simon-debruijn
