--- a/.env.ci
+++ b/.env.ci
@@ -68,5 +68,10 @@ AUTH0_CLIENT_ID=
 AUTH0_CLIENT_SECRET=
 AUTH0_REDIRECT_URI=http://localhost/auth/callback
 
+AUTH0_MANAGEMENT_DOMAIN=publiq-acc.eu.auth0.com
+AUTH0_MANAGEMENT_CLIENT_ID=
+AUTH0_MANAGEMENT_CLIENT_SECRET=
+AUTH0_MANAGEMENT_AUDIENCE=https://publiq-acc.eu.auth0.com/api/v2/
+
 INSIGHTLY_HOST=https://api.insight.ly/v3.1/
 INSIGHTLY_API_KEY=
