--- a/.env.example
+++ b/.env.example
@@ -63,10 +63,10 @@ WWWUSER=1000
 
 NOVA_LICENSE_KEY=
 
-AUTH0_DOMAIN=account-acc.uitid.be
-AUTH0_CLIENT_ID=
-AUTH0_CLIENT_SECRET=
-AUTH0_REDIRECT_URI=http://localhost/auth/callback
+AUTH0_LOGIN_DOMAIN=account-acc.uitid.be
+AUTH0_LOGIN_CLIENT_ID=
+AUTH0_LOGIN_CLIENT_SECRET=
+AUTH0_LOGIN_REDIRECT_URI=http://localhost/auth/callback
 
 INSIGHTLY_HOST=https://api.insight.ly/v3.1/
 INSIGHTLY_API_KEY=
