Move login_parameters to env variable

--- a/.env.example
+++ b/.env.example
@@ -67,6 +67,7 @@ AUTH0_LOGIN_DOMAIN=account-acc.uitid.be
 AUTH0_LOGIN_CLIENT_ID=
 AUTH0_LOGIN_CLIENT_SECRET=
 AUTH0_LOGIN_REDIRECT_URI=http://localhost/auth/callback
+AUTH0_LOGIN_PARAMETERS="locale=nl&referrer=publiq-platform&prompt=login&skip_verify_legacy=true&product_display_name=publiq platform"
 
 INSIGHTLY_HOST=https://api.insight.ly/v3.1/
 INSIGHTLY_API_KEY=
