--- a/.env.ci
+++ b/.env.ci
@@ -68,5 +68,23 @@ AUTH0_LOGIN_CLIENT_ID=
 AUTH0_LOGIN_CLIENT_SECRET=
 AUTH0_LOGIN_REDIRECT_URI=http://localhost/auth/callback
 
+# MUST always be set to DEV tenant config except for the .env for the production app!
+# Otherwise local/staging/acceptance/testing environments of publiq platform will create real clients on acc/test/prod.
+AUTH0_ACC_TENANT_DOMAIN=publiq-dev.eu.auth0.com
+AUTH0_ACC_TENANT_CLIENT_ID=
+AUTH0_ACC_TENANT_CLIENT_SECRET=
+
+# MUST always be set to DEV tenant config except for the .env for the production app!
+# Otherwise local/staging/acceptance/testing environments of publiq platform will create real clients on acc/test/prod.
+AUTH0_TEST_TENANT_DOMAIN=publiq-dev.eu.auth0.com
+AUTH0_TEST_TENANT_CLIENT_ID=
+AUTH0_TEST_TENANT_CLIENT_SECRET=
+
+# MUST always be set to DEV tenant config except for the .env for the production app!
+# Otherwise local/staging/acceptance/testing environments of publiq platform will create real clients on acc/test/prod.
+AUTH0_PROD_TENANT_DOMAIN=publiq-dev.eu.auth0.com
+AUTH0_PROD_TENANT_CLIENT_ID=
+AUTH0_PROD_TENANT_CLIENT_SECRET=
+
 INSIGHTLY_HOST=https://api.insight.ly/v3.1/
 INSIGHTLY_API_KEY=
