--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^9.19",
         "laravel/horizon": "^5.10",
         "laravel/nova": "^4.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "publiq/client-credentials": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
@@ -30,6 +31,10 @@
         {
             "type": "composer",
             "url": "https://nova.laravel.com"
+        },
+        {
+            "type": "path",
+            "url": "./nova-components/ClientCredentials"
         }
     ],
     "autoload": {
