--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
         "format:check": "prettier --check 'resources/ts/**/*.{js,jsx,ts,tsx}'",
         "lint": "eslint --fix 'resources/ts/**/*.{js,jsx,ts,tsx}'",
         "lint:check": "eslint 'resources/ts/**/*.{js,jsx,ts,tsx}'",
-        "types:check": "tsc",
-        "build-client-credentials": "cd nova-components/ClientCredentials && npm run dev",
-        "build-client-credentials-prod": "cd nova-components/ClientCredentials && npm run prod"
+        "types:check": "tsc"
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
