--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/horizon": "^5.10",
         "laravel/nova": "^4.0",
         "laravel/tinker": "^2.7",
-        "publiq/client-credentials": "*"
+        "publiq/client-credentials": "*",
+        "sentry/sentry-laravel": "^3.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
