--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,10 +3,12 @@ updates:
   - package-ecosystem: composer
     directory: "/"
     schedule:
+      interval: weekly
       day: monday
       time: "02:00"
   - package-ecosystem: npm
     directory: "/"
     schedule:
+      interval: weekly
       day: monday
       time: "02:15"
