--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": "^8.1.0",
         "auth0/login": "^7.2",
         "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/oauth-subscriber": "^0.6",
         "inertiajs/inertia-laravel": "^0.6.3",
         "laravel/framework": "^9.19",
         "laravel/horizon": "^5.10",
