Add uitid v1 config

--- a/.env.ci
+++ b/.env.ci
@@ -86,6 +86,33 @@ AUTH0_PROD_TENANT_DOMAIN=publiq-dev.eu.auth0.com
 AUTH0_PROD_TENANT_CLIENT_ID=
 AUTH0_PROD_TENANT_CLIENT_SECRET=
 
+# MUST always be set to UiTiD v1 ACC environment config except for the .env for the production app!
+# Otherwise local/staging/acceptance/testing environments of publiq platform will create real consumers on test/prod.
+UITID_V1_ACC_URL=https://acc.uitid.be/uitid/rest/
+UITID_V1_ACC_CONSUMER_KEY=
+UITID_V1_ACC_CONSUMER_SECRET=
+UITID_V1_ACC_GROUPS_ENTRY_API="3,24380,24640"
+UITID_V1_ACC_GROUPS_SEARCH_API="3,24379"
+UITID_V1_ACC_GROUPS_WIDGETS="3,24378"
+
+# MUST always be set to UiTiD v1 ACC environment config except for the .env for the production app!
+# Otherwise local/staging/acceptance/testing environments of publiq platform will create real consumers on test/prod.
+UITID_V1_TEST_URL=https://acc.uitid.be/uitid/rest/
+UITID_V1_TEST_CONSUMER_KEY=
+UITID_V1_TEST_CONSUMER_SECRET=
+UITID_V1_TEST_GROUPS_ENTRY_API="3,24380,24640"
+UITID_V1_TEST_GROUPS_SEARCH_API="3,24379"
+UITID_V1_TEST_GROUPS_WIDGETS="3,24378"
+
+# MUST always be set to UiTiD v1 ACC environment config except for the .env for the production app!
+# Otherwise local/staging/acceptance/testing environments of publiq platform will create real consumers on test/prod.
+UITID_V1_PROD_URL=https://acc.uitid.be/uitid/rest/
+UITID_V1_PROD_CONSUMER_KEY=
+UITID_V1_PROD_CONSUMER_SECRET=
+UITID_V1_PROD_GROUPS_ENTRY_API="3,24380,24640"
+UITID_V1_PROD_GROUPS_SEARCH_API="3,24379"
+UITID_V1_PROD_GROUPS_WIDGETS="3,24378"
+
 INSIGHTLY_HOST=https://api.insight.ly/v3.1/
 INSIGHTLY_API_KEY=
 
