Require the new nova field InsightlyLink

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/nova": "^4.0",
         "laravel/tinker": "^2.7",
         "publiq/client-credentials": "*",
+        "publiq/insightly-link": "*",
         "sentry/sentry-laravel": "^3.1"
     },
     "require-dev": {
@@ -35,6 +36,10 @@
         {
             "type": "path",
             "url": "./nova-components/ClientCredentials"
+        },
+        {
+            "type": "path",
+            "url": "./nova-components/InsightlyLink"
         }
     ],
     "autoload": {
