Make UiTiD action URLs configurable

--- a/.env.ci
+++ b/.env.ci
@@ -94,6 +94,7 @@ UITID_V1_ACC_CONSUMER_SECRET=
 UITID_V1_ACC_GROUPS_ENTRY_API="3,24380,24640"
 UITID_V1_ACC_GROUPS_SEARCH_API="3,24379"
 UITID_V1_ACC_GROUPS_WIDGETS="3,24378"
+UITID_V1_ACC_CONSUMER_DETAILS_URL_TEMPLATE="https://acc.uitid.be/uitid/rest/admin/serviceconsumers/%s"
 
 # MUST always be set to UiTiD v1 ACC environment config except for the .env for the production app!
 # Otherwise local/staging/acceptance/testing environments of publiq platform will create real consumers on test/prod.
@@ -103,6 +104,7 @@ UITID_V1_TEST_CONSUMER_SECRET=
 UITID_V1_TEST_GROUPS_ENTRY_API="3,24380,24640"
 UITID_V1_TEST_GROUPS_SEARCH_API="3,24379"
 UITID_V1_TEST_GROUPS_WIDGETS="3,24378"
+UITID_V1_TEST_CONSUMER_DETAILS_URL_TEMPLATE="https://acc.uitid.be/uitid/rest/admin/serviceconsumers/%s"
 
 # MUST always be set to UiTiD v1 ACC environment config except for the .env for the production app!
 # Otherwise local/staging/acceptance/testing environments of publiq platform will create real consumers on test/prod.
@@ -112,6 +114,7 @@ UITID_V1_PROD_CONSUMER_SECRET=
 UITID_V1_PROD_GROUPS_ENTRY_API="3,24380,24640"
 UITID_V1_PROD_GROUPS_SEARCH_API="3,24379"
 UITID_V1_PROD_GROUPS_WIDGETS="3,24378"
+UITID_V1_PROD_CONSUMER_DETAILS_URL_TEMPLATE="https://acc.uitid.be/uitid/rest/admin/serviceconsumers/%s"
 
 INSIGHTLY_HOST=https://api.insight.ly/v3.1/
 INSIGHTLY_API_KEY=
