Make Auth0 action URLs configurable

--- a/.env.ci
+++ b/.env.ci
@@ -73,18 +73,21 @@ AUTH0_LOGIN_REDIRECT_URI=http://localhost/auth/callback
 AUTH0_ACC_TENANT_DOMAIN=publiq-dev.eu.auth0.com
 AUTH0_ACC_TENANT_CLIENT_ID=
 AUTH0_ACC_TENANT_CLIENT_SECRET=
+AUTH0_ACC_TENANT_CLIENT_DETAILS_URL_TEMPLATE="https://manage.auth0.com/dashboard/eu/publiq-dev/applications/%s/settings"
 
 # MUST always be set to DEV tenant config except for the .env for the production app!
 # Otherwise local/staging/acceptance/testing environments of publiq platform will create real clients on acc/test/prod.
 AUTH0_TEST_TENANT_DOMAIN=publiq-dev.eu.auth0.com
 AUTH0_TEST_TENANT_CLIENT_ID=
 AUTH0_TEST_TENANT_CLIENT_SECRET=
+AUTH0_TEST_TENANT_CLIENT_DETAILS_URL_TEMPLATE="https://manage.auth0.com/dashboard/eu/publiq-dev/applications/%s/settings"
 
 # MUST always be set to DEV tenant config except for the .env for the production app!
 # Otherwise local/staging/acceptance/testing environments of publiq platform will create real clients on acc/test/prod.
 AUTH0_PROD_TENANT_DOMAIN=publiq-dev.eu.auth0.com
 AUTH0_PROD_TENANT_CLIENT_ID=
 AUTH0_PROD_TENANT_CLIENT_SECRET=
+AUTH0_PROD_TENANT_CLIENT_DETAILS_URL_TEMPLATE="https://manage.auth0.com/dashboard/eu/publiq-dev/applications/%s/settings"
 
 # MUST always be set to UiTiD v1 ACC environment config except for the .env for the production app!
 # Otherwise local/staging/acceptance/testing environments of publiq platform will create real consumers on test/prod.
