--- a/.env.example
+++ b/.env.example
@@ -67,7 +67,7 @@ AUTH0_LOGIN_DOMAIN=account-acc.uitid.be
 AUTH0_LOGIN_CLIENT_ID=
 AUTH0_LOGIN_CLIENT_SECRET=
 AUTH0_LOGIN_REDIRECT_URI=http://localhost/auth/callback
-AUTH0_LOGIN_PARAMETERS="locale=nl&referrer=publiq-platform&prompt=login&skip_verify_legacy=true&product_display_name=publiq platform"
+AUTH0_LOGIN_PARAMETERS="locale=nl&referrer=publiq-platform&skip_verify_legacy=true&product_display_name=publiq platform"
 
 # MUST always be set to DEV tenant config except for the .env for the production app!
 # Otherwise local/staging/acceptance/testing environments of publiq platform will create real clients on acc/test/prod.
