--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^2.7",
         "publiq/client-credentials": "*",
         "publiq/insightly-link": "*",
-        "sentry/sentry-laravel": "^3.1"
+        "sentry/sentry-laravel": "^3.1",
+        "spatie/laravel-activitylog": "^4.7"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
