--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,14 @@ DB_DATABASE=laravel
 DB_USERNAME=sail
 DB_PASSWORD=password
 
+ACTIVITY_LOGGER_ENABLED=true
+ACTIVITY_LOGGER_DB_CONNECTION=mysql
+ACTIVITY_LOGGER_DB_HOST=mysql
+ACTIVITY_LOGGER_DB_PORT=3306
+ACTIVITY_LOGGER_DB_DATABASE=laravel
+ACTIVITY_LOGGER_DB_USERNAME=sail
+ACTIVITY_LOGGER_DB_PASSWORD=password
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
