--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
         "types:check": "tsc"
     },
     "dependencies": {
-        "@inertiajs/inertia": "^0.11.1",
-        "@inertiajs/inertia-react": "^0.8.1",
+        "@inertiajs/react": "^1.0.0",
         "@vitejs/plugin-react": "^2.2.0",
         "i18next": "^22.4.9",
         "react": "^18.2.0",
