--- a/.env.ci
+++ b/.env.ci
@@ -68,6 +68,7 @@ AUTH0_LOGIN_CLIENT_ID=
 AUTH0_LOGIN_CLIENT_SECRET=
 AUTH0_LOGIN_REDIRECT_URI=http://localhost/auth/callback
 
+AUTH0_INTEGRATION_ENABLED=false
 # MUST always be set to DEV tenant config except for the .env for the production app!
 # Otherwise local/staging/acceptance/testing environments of publiq platform will create real clients on acc/test/prod.
 AUTH0_ACC_TENANT_DOMAIN=publiq-dev.eu.auth0.com
@@ -89,6 +90,7 @@ AUTH0_PROD_TENANT_CLIENT_ID=
 AUTH0_PROD_TENANT_CLIENT_SECRET=
 AUTH0_PROD_TENANT_CLIENT_DETAILS_URL_TEMPLATE="https://manage.auth0.com/dashboard/eu/publiq-dev/applications/%s/settings"
 
+UITID_INTEGRATION_ENABLED=false
 # MUST always be set to UiTiD v1 ACC environment config except for the .env for the production app!
 # Otherwise local/staging/acceptance/testing environments of publiq platform will create real consumers on test/prod.
 UITID_V1_ACC_URL=https://acc.uitid.be/uitid/rest/
@@ -119,7 +121,9 @@ UITID_V1_PROD_GROUPS_SEARCH_API="3,24379"
 UITID_V1_PROD_GROUPS_WIDGETS="3,24378"
 UITID_V1_PROD_CONSUMER_DETAILS_URL_TEMPLATE="https://acc.uitid.be/uitid/rest/admin/serviceconsumers/%s"
 
+INSIGHTLY_INTEGRATION_ENABLED=false
 INSIGHTLY_HOST=https://api.insight.ly/v3.1/
 INSIGHTLY_API_KEY=
 
+SENTRY_LARAVEL_INTEGRATION_ENABLED=false
 SENTRY_LARAVEL_DSN=
