--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @bertramakers @LucWollants @JonasVHG @steftrenson @brampauwelyn @simon-debruijn
+* @LucWollants @JonasVHG @steftrenson @brampauwelyn @simon-debruijn
