--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
         "types:check": "tsc"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.4.0",
+        "@fortawesome/free-regular-svg-icons": "^6.4.0",
+        "@fortawesome/free-solid-svg-icons": "^6.4.0",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@inertiajs/react": "^1.0.7",
         "i18next": "^22.5.0",
         "react": "^18.2.0",
