--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@inertiajs/react": "^1.0.7",
         "i18next": "^22.5.0",
+        "i18next-browser-languagedetector": "^7.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^12.3.1"
