--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.3",
+        "@types/lodash": "^4.14.195",
         "@types/react": "^18.2.8",
         "@types/react-dom": "^18.2.4",
         "@typescript-eslint/eslint-plugin": "^5.59.8",
