--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,11 @@
     "require": {
         "php": "^8.2.0",
         "ext-simplexml": "*",
-        "auth0/login": "^7.2",
+        "auth0/auth0-php": "^8.6",
         "guzzlehttp/guzzle": "^7.2",
         "guzzlehttp/oauth-subscriber": "^0.6",
         "inertiajs/inertia-laravel": "^0.6.3",
-        "laravel/framework": "^9.19",
+        "laravel/framework": "^v10.13.5",
         "laravel/horizon": "^5.10",
         "laravel/nova": "^4.0",
         "laravel/tinker": "^2.7",
@@ -28,7 +28,7 @@
         "nunomaduro/larastan": "^2.0",
         "phpunit/phpunit": "^9.5.10",
         "publiq/php-cs-fixer-config": "^2.0",
-        "spatie/laravel-ignition": "^1.0"
+        "spatie/laravel-ignition": "^2.1.3"
     },
     "repositories": [
         {
