--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "module": "commonjs",
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "noEmit": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
@@ -9,6 +10,7 @@
     "skipLibCheck": true,
     "jsx": "react",
     "lib": ["ESNext", "DOM"],
+    "types": ["vite/client"],
     "resolveJsonModule": true
   },
   "include": ["resources/ts"],
