Add fake client id

--- a/.env.ci
+++ b/.env.ci
@@ -64,8 +64,8 @@ WWWUSER=1000
 NOVA_LICENSE_KEY=
 
 AUTH0_LOGIN_DOMAIN=account-acc.uitid.be
-AUTH0_LOGIN_CLIENT_ID=
-AUTH0_LOGIN_CLIENT_SECRET=
+AUTH0_LOGIN_CLIENT_ID=***
+AUTH0_LOGIN_CLIENT_SECRET=***
 AUTH0_LOGIN_REDIRECT_URI=http://localhost/auth/callback
 
 AUTH0_CLIENT_CREATION_ENABLED=true
