--- a/.env.ci
+++ b/.env.ci
@@ -57,6 +57,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+VITE_APP_ENV=${APP_ENV}
+VITE_SENTRY_DSN=${SENTRY_LARAVEL_DSN}
+VITE_SENTRY_ENABLED=${SENTRY_LARAVEL_ENABLED}
 
 WWWGROUP=1000
 WWWUSER=1000
