--- a/.env.example
+++ b/.env.example
@@ -60,7 +60,7 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 VITE_APP_ENV=${APP_ENV}
 VITE_SENTRY_DSN=${SENTRY_LARAVEL_DSN}
 VITE_SENTRY_ENABLED=${SENTRY_LARAVEL_ENABLED}
-VITE_UITID_WIDGET_URL=${}
+VITE_UITID_WIDGET_URL=${UITID_WIDGET_URL}
 
 
 WWWGROUP=1000
