--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,8 @@
     ],
     "rules": {
         "@typescript-eslint/ban-ts-comment": "off",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "react-hooks/exhaustive-deps": "error"
     },
     "settings": {
         "react": {
