--- a/.env.ci
+++ b/.env.ci
@@ -52,6 +52,8 @@ PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
+UITID_WIDGET_URL=https://assets-acc.uit.be/uitid-widget/
+
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
@@ -60,6 +62,7 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 VITE_APP_ENV=${APP_ENV}
 VITE_SENTRY_DSN=${SENTRY_LARAVEL_DSN}
 VITE_SENTRY_ENABLED=${SENTRY_LARAVEL_ENABLED}
+VITE_UITID_WIDGET_URL=${UITID_WIDGET_URL}
 
 WWWGROUP=1000
 WWWUSER=1000
