Add reportUnusedDisableDirectives option

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+    "reportUnusedDisableDirectives": true,
     "env": {
         "browser": true,
         "es2021": true
@@ -7,8 +8,7 @@
         "eslint:recommended",
         "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
-        "plugin:react-hooks/recommended",
-        "prettier"
+        "plugin:react-hooks/recommended"
     ],
     "overrides": [],
     "parser": "@typescript-eslint/parser",
@@ -27,7 +27,7 @@
     },
     "settings": {
         "react": {
-            "version": "18.2"
+            "version": "detect"
         }
     }
 }
