--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ yarn-error.log
 .php-cs-fixer.cache
 database/project-aanvraag
 .phpunit.cache
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
