--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@inertiajs/react": "^1.0.15",
     "@sentry/browser": "^7.106.0",
+    "dotenv": "^16.4.5",
     "i18next": "^23.10.0",
     "i18next-browser-languagedetector": "^7.2.0",
     "react": "^18.2.0",
