--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "format:check": "prettier --check 'resources/ts/**/*.{js,jsx,ts,tsx}'",
     "lint": "eslint --fix 'resources/ts/**/*.{js,jsx,ts,tsx}'",
     "lint:check": "eslint 'resources/ts/**/*.{js,jsx,ts,tsx}'",
-    "types:check": "tsc"
+    "types:check": "tsc",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
