--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/horizon": "^5.10",
         "laravel/nova": "^4.0",
         "laravel/tinker": "^2.7",
+        "mailjet/mailjet-apiv3-php": "^1.6",
         "publiq/insightly-link": "*",
         "sentry/sentry-laravel": "^4.1",
         "spatie/laravel-activitylog": "^4.7"
