PPF-344 - Add E2E admin test user credentials

--- a/.env.ci
+++ b/.env.ci
@@ -133,3 +133,10 @@ INSIGHTLY_API_KEY=
 
 SENTRY_LARAVEL_ENABLED=true
 SENTRY_LARAVEL_DSN=
+
+E2E_TEST_BASE_URL=https://platform-acc.publiq.be/
+E2E_TEST_EMAIL=dev+e2etest@publiq.be
+E2E_TEST_PASSWORD=
+
+E2E_TEST_ADMIN_EMAIL=dev+e2etest-admin@publiq.be
+E2E_TEST_ADMIN_PASSWORD=
