--- a/.env.example
+++ b/.env.example
@@ -144,3 +144,11 @@ SLACK_BOT_TOKEN=
 SLACK_CHANNEL_ID=
 
 GTM_ID=
+
+E2E_TEST_BASE_URL=https://platform-acc.publiq.be/
+E2E_TEST_EMAIL=dev+e2etest@publiq.be
+E2E_TEST_PASSWORD=
+
+E2E_TEST_ADMIN_EMAIL=dev+e2etest-admin@publiq.be
+E2E_TEST_ADMIN_PASSWORD=
+
