--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     ],
     "rules": {
         "@typescript-eslint/ban-ts-comment": "off",
+        "@typescript-eslint/consistent-type-imports": "error",
         "react/prop-types": "off",
         "react-hooks/exhaustive-deps": "error"
     },
