--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "type": "project",
     "description": "Publiq platform",
     "license": "MIT",
+    "version": "0.1.0",
     "require": {
         "php": "^8.2.0",
         "ext-simplexml": "*",
