Reuse existing IntegrationType

--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -8,5 +8,5 @@
     "skipLibCheck": true,
     "types": ["../node_modules/@types/node"]
   },
-  "include": ["./**/*.ts"]
+  "include": ["./**/*.ts", "../resources/ts/types/IntegrationType.ts"]
 }
