--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@inertiajs/react": "^1.0.15",
         "@sentry/browser": "^7.109.0",
+        "date-fns": "^3.6.0",
         "dotenv": "^16.4.5",
         "i18next": "^23.10.1",
         "i18next-browser-languagedetector": "^7.2.1",
