--- a/.env.ci
+++ b/.env.ci
@@ -147,6 +147,6 @@ KEYCLOAK_CLIENT_ID='not_real_client'
 KEYCLOAK_CLIENT_SECRET='not_the_real_secret'
 
 # Incorrect values, but need to contain a valid UUID formatted string
-KEYCLOAK_SCOPE_SEARCH_API_ID='1e4ee5485-08ce-48fb-abc8-0775293242c0' #publiq-api-sapi-scope
-KEYCLOAK_SCOPE_ENTRY_API_ID='e4ee5485-08ce-48fb-abc8-0775293242c0' #publiq-api-entry-scope
-KEYCLOAK_SCOPE_WIDGETS_ID='e4ee5485-08ce-48fb-abc8-0775293242c0'#publiq-widget-scope
+KEYCLOAK_SCOPE_SEARCH_API_ID='bcfb28cc-454f-488a-b080-6a29d9c0158e' #publiq-api-sapi-scope
+KEYCLOAK_SCOPE_ENTRY_API_ID='bcfb28cc-454f-488a-b080-6a29d9c0158e' #publiq-api-entry-scope
+KEYCLOAK_SCOPE_WIDGETS_ID='bcfb28cc-454f-488a-b080-6a29d9c0158e'#publiq-widget-scope
