--- a/.env.ci
+++ b/.env.ci
@@ -143,7 +143,7 @@ E2E_TEST_ADMIN_PASSWORD=
 
 UITPAS_INTEGRATION_TYPE_ENABLED=true
 
-KEYCLOAK_ENABLE=true
+KEYCLOAK_ENABLED=true
 KEYCLOAK_BASE_URL='https://account.kcpoc.lodgon.com/'
 KEYCLOAK_CLIENT_ID='not_real_client'
 KEYCLOAK_CLIENT_SECRET='not_the_real_secret'
