Add missing .env variable in example file for UiTPAS feature

--- a/.env.example
+++ b/.env.example
@@ -152,3 +152,5 @@ E2E_TEST_PASSWORD=
 E2E_TEST_ADMIN_EMAIL=dev+e2etest-admin@publiq.be
 E2E_TEST_ADMIN_PASSWORD=
 
+UITPAS_INTEGRATION_TYPE_ENABLED=true
+VITE_UITPAS_INTEGRATION_TYPE_ENABLED=${UITPAS_INTEGRATION_TYPE_ENABLED}
