Add config for search uri and key

--- a/.env.ci
+++ b/.env.ci
@@ -143,3 +143,6 @@ E2E_TEST_ADMIN_PASSWORD=
 
 UITPAS_INTEGRATION_TYPE_ENABLED=true
 VITE_UITPAS_INTEGRATION_TYPE_ENABLED=${UITPAS_INTEGRATION_TYPE_ENABLED}
+
+SEARCH_BASE_URI=https://search-acc.uitdatabank.be/
+SEARCH_API_KEY=
