--- a/.env.ci
+++ b/.env.ci
@@ -146,10 +146,10 @@ VITE_UITPAS_INTEGRATION_TYPE_ENABLED=${UITPAS_INTEGRATION_TYPE_ENABLED}
 
 KEYCLOAK_ENABLED=true
 
-KEYCLOAK_STAG_BASE_URL='https://account.kcpoc.lodgon.com/'
-KEYCLOAK_STAG_REALM_NAME='uitidpoc'
-KEYCLOAK_STAG_CLIENT_ID='php_client'
-KEYCLOAK_STAG_CLIENT_SECRET='xxx'
+KEYCLOAK_ACC_BASE_URL='https://account.kcpoc.lodgon.com/'
+KEYCLOAK_ACC_REALM_NAME='uitidpoc'
+KEYCLOAK_ACC_CLIENT_ID='php_client'
+KEYCLOAK_ACC_CLIENT_SECRET='xxx'
 
 KEYCLOAK_TEST_BASE_URL='https://account.kcpoc.lodgon.com/'
 KEYCLOAK_TEST_REALM_NAME='uitidpoc'
