Tweak config with channels but leave old until deployed

--- a/.env.ci
+++ b/.env.ci
@@ -131,6 +131,12 @@ INSIGHTLY_ENABLED=true
 INSIGHTLY_HOST=https://api.insight.ly/v3.1/
 INSIGHTLY_API_KEY=
 
+SLACK_BOT_TOKEN=***
+SLACK_CHANNEL_ID=***
+SLACK_BASE_URI=https://slack.com/api/
+SLACK_TECHNICAL_SUPPORT_CHANNEL_ID=***
+SLACK_PUBLIQ_PLATFORM_CHANNEL_ID=***
+
 SENTRY_LARAVEL_ENABLED=true
 SENTRY_LARAVEL_DSN=
 
