--- a/.env.ci
+++ b/.env.ci
@@ -131,6 +131,12 @@ INSIGHTLY_ENABLED=true
 INSIGHTLY_HOST=https://api.insight.ly/v3.1/
 INSIGHTLY_API_KEY=
 
+SLACK_BOT_TOKEN=***
+SLACK_CHANNEL_ID=***
+SLACK_BASE_URI=https://slack.com/api/
+SLACK_TECHNICAL_SUPPORT_CHANNEL_ID=***
+SLACK_PUBLIQ_PLATFORM_CHANNEL_ID=***
+
 SENTRY_LARAVEL_ENABLED=true
 SENTRY_LARAVEL_DSN=
 
@@ -141,7 +147,7 @@ E2E_TEST_PASSWORD=
 E2E_TEST_ADMIN_EMAIL=dev+e2etest-admin@publiq.be
 E2E_TEST_ADMIN_PASSWORD=
 
-UITPAS_INTEGRATION_TYPE_ENABLED=true
+UITPAS_INTEGRATION_TYPE_ENABLED=false
 VITE_UITPAS_INTEGRATION_TYPE_ENABLED=${UITPAS_INTEGRATION_TYPE_ENABLED}
 
 KEYCLOAK_ENABLED=true
@@ -166,3 +172,6 @@ KEYCLOAK_SCOPE_SEARCH_API_ID='bcfb28cc-454f-488a-b080-6a29d9c0158e' #publiq-api-
 KEYCLOAK_SCOPE_ENTRY_API_ID='bcfb28cc-454f-488a-b080-6a29d9c0158e' #publiq-api-entry-scope
 KEYCLOAK_SCOPE_WIDGETS_ID='bcfb28cc-454f-488a-b080-6a29d9c0158e'#publiq-widget-scope
 KEYCLOAK_SCOPE_UITPAS_ID='bcfb28cc-454f-488a-b080-6a29d9c0158e'#uitpas-scope
+
+SEARCH_BASE_URI=https://search-acc.uitdatabank.be/
+SEARCH_API_KEY=
