update .env.ci with new config

--- a/.env.ci
+++ b/.env.ci
@@ -153,25 +153,37 @@ VITE_UITPAS_INTEGRATION_TYPE_ENABLED=${UITPAS_INTEGRATION_TYPE_ENABLED}
 KEYCLOAK_ENABLED=true
 
 KEYCLOAK_ACC_BASE_URL='https://account.kcpoc.lodgon.com/'
-KEYCLOAK_ACC_REALM_NAME='uitidpoc'
+KEYCLOAK_ACC_REALM_NAME='myrealm'
 KEYCLOAK_ACC_CLIENT_ID='php_client'
-KEYCLOAK_ACC_CLIENT_SECRET='xxx'
-
-KEYCLOAK_TEST_BASE_URL='https://account.kcpoc.lodgon.com/'
-KEYCLOAK_TEST_REALM_NAME='uitidpoc'
-KEYCLOAK_TEST_CLIENT_ID='php_client'
-KEYCLOAK_TEST_CLIENT_SECRET='xxx'
-
-KEYCLOAK_PROD_BASE_URL='https://account.kcpoc.lodgon.com/'
-KEYCLOAK_PROD_REALM_NAME='uitidpoc'
-KEYCLOAK_PROD_CLIENT_ID='php_client'
-KEYCLOAK_PROD_CLIENT_SECRET='xxx'
+KEYCLOAK_ACC_CLIENT_SECRET='super-secret'
 
 # Incorrect values, but need to contain a valid UUID formatted string
-KEYCLOAK_SCOPE_SEARCH_API_ID='bcfb28cc-454f-488a-b080-6a29d9c0158e' #publiq-api-sapi-scope
-KEYCLOAK_SCOPE_ENTRY_API_ID='bcfb28cc-454f-488a-b080-6a29d9c0158e' #publiq-api-entry-scope
-KEYCLOAK_SCOPE_WIDGETS_ID='bcfb28cc-454f-488a-b080-6a29d9c0158e'#publiq-widget-scope
-KEYCLOAK_SCOPE_UITPAS_ID='bcfb28cc-454f-488a-b080-6a29d9c0158e'#uitpas-scope
+KEYCLOAK_ACC_SCOPE_SEARCH_API_ID='06059529-74b5-422a-a499-ffcaf065d437' #publiq-api-sapi-scope
+KEYCLOAK_ACC_SCOPE_ENTRY_API_ID='d8a54568-26da-412b-a441-d5e2fad84478' #publiq-api-entry-scope
+KEYCLOAK_ACC_SCOPE_WIDGETS_ID='123ae05d-1c41-40c8-8716-c4654a3bfd98'#publiq-widget-scope
+KEYCLOAK_ACC_SCOPE_UITPAS_ID='bcfb28cc-454f-488a-b080-6a29d9c0158e'#uitpas-scope
+
+KEYCLOAK_TEST_BASE_URL='https://account.kcpoc.lodgon.com/'
+KEYCLOAK_TEST_REALM_NAME='myrealm'
+KEYCLOAK_TEST_CLIENT_ID='php_client'
+KEYCLOAK_TEST_CLIENT_SECRET='super-secret'
+
+# Incorrect values, but need to contain a valid UUID formatted string
+KEYCLOAK_TEST_SCOPE_SEARCH_API_ID='06059529-74b5-422a-a499-ffcaf065d437' #publiq-api-sapi-scope
+KEYCLOAK_TEST_SCOPE_ENTRY_API_ID='d8a54568-26da-412b-a441-d5e2fad84478' #publiq-api-entry-scope
+KEYCLOAK_TEST_SCOPE_WIDGETS_ID='123ae05d-1c41-40c8-8716-c4654a3bfd98'#publiq-widget-scope
+KEYCLOAK_TEST_SCOPE_UITPAS_ID='bcfb28cc-454f-488a-b080-6a29d9c0158e'#uitpas-scope
+
+KEYCLOAK_PROD_BASE_URL='https://account.kcpoc.lodgon.com/'
+KEYCLOAK_PROD_REALM_NAME='myrealm'
+KEYCLOAK_PROD_CLIENT_ID='php_client'
+KEYCLOAK_PROD_CLIENT_SECRET='super-secret'
+
+# Incorrect values, but need to contain a valid UUID formatted string
+KEYCLOAK_PROD_SCOPE_SEARCH_API_ID='06059529-74b5-422a-a499-ffcaf065d437' #publiq-api-sapi-scope
+KEYCLOAK_PROD_SCOPE_ENTRY_API_ID='d8a54568-26da-412b-a441-d5e2fad84478' #publiq-api-entry-scope
+KEYCLOAK_PROD_SCOPE_WIDGETS_ID='123ae05d-1c41-40c8-8716-c4654a3bfd98'#publiq-widget-scope
+KEYCLOAK_PROD_SCOPE_UITPAS_ID='bcfb28cc-454f-488a-b080-6a29d9c0158e'#uitpas-scope
 
 SEARCH_BASE_URI=https://search-acc.uitdatabank.be/
 SEARCH_API_KEY=
