Remove env variable `SLACK_CHANNEL_ID`

--- a/.env.example
+++ b/.env.example
@@ -142,6 +142,8 @@ GTAG_MEASUREMENT_ID=
 
 SLACK_BOT_TOKEN=
 SLACK_CHANNEL_ID=
+SLACK_TECHNICAL_SUPPORT_CHANNEL_ID=***
+SLACK_PUBLIQ_PLATFORM_CHANNEL_ID=***
 
 GTM_ID=
 
