--- a/.env.ci
+++ b/.env.ci
@@ -132,7 +132,6 @@ INSIGHTLY_HOST=https://api.insight.ly/v3.1/
 INSIGHTLY_API_KEY=
 
 SLACK_BOT_TOKEN=***
-SLACK_CHANNEL_ID=***
 SLACK_BASE_URI=https://slack.com/api/
 SLACK_TECHNICAL_SUPPORT_CHANNEL_ID=***
 SLACK_PUBLIQ_PLATFORM_CHANNEL_ID=***
@@ -147,6 +146,7 @@ E2E_TEST_PASSWORD=
 E2E_TEST_ADMIN_EMAIL=dev+e2etest-admin@publiq.be
 E2E_TEST_ADMIN_PASSWORD=
 
+UITPAS_INTEGRATION_TYPE_ENABLED=false
 UITPAS_INTEGRATION_TYPE_ENABLED=false
 VITE_UITPAS_INTEGRATION_TYPE_ENABLED=${UITPAS_INTEGRATION_TYPE_ENABLED}
 
