add env.ci variable

--- a/.env.ci
+++ b/.env.ci
@@ -74,6 +74,8 @@ AUTH0_LOGIN_CLIENT_ID=***
 AUTH0_LOGIN_CLIENT_SECRET=***
 AUTH0_LOGIN_REDIRECT_URI=http://localhost/auth/callback
 
+KEYCLOAK_LOGIN_PARAMETERS="locale=nl&referrer=publiq-platform&prompt=login&skip_verify_legacy=true&product_display_name=publiq platform"
+
 AUTH0_CLIENT_CREATION_ENABLED=true
 
 # MUST always be set to DEV tenant config except for the .env for the production app!
