Try to fix broken pipeline tests

--- a/.env.ci
+++ b/.env.ci
@@ -1,6 +1,6 @@
 APP_NAME=publiq-platform
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:5f6ivEq1QCl8ylgkFEzMpU6npqDi5tGYRuG1LYzilb4=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_SERVICE=laravel
@@ -74,7 +74,16 @@ AUTH0_LOGIN_CLIENT_ID=***
 AUTH0_LOGIN_CLIENT_SECRET=***
 AUTH0_LOGIN_REDIRECT_URI=http://localhost/auth/callback
 
+KEYCLOAK_CREATION_ENABLED=true
+KEYCLOAK_LOGIN_ENABLED=false
+
+KEYCLOAK_LOGIN_DOMAIN=account-keycloak-acc.uitid.be
+KEYCLOAK_LOGIN_MANAGEMENT_DOMAIN=account-keycloak-acc.uitid.be
+KEYCLOAK_LOGIN_CLIENT_ID=
+KEYCLOAK_LOGIN_CLIENT_SECRET
+KEYCLOAK_LOGIN_REDIRECT_URI=http://localhost/auth/callback
 KEYCLOAK_LOGIN_PARAMETERS="locale=nl&referrer=publiq-platform&prompt=login&skip_verify_legacy=true&product_display_name=publiq platform"
+KEYCLOAK_LOGIN_REALM_NAME=
 
 AUTH0_CLIENT_CREATION_ENABLED=true
 
