Add missing key for search-related tests

--- a/.env.ci
+++ b/.env.ci
@@ -195,4 +195,4 @@ KEYCLOAK_PROD_SCOPE_ENTRY_API_ID='d8a54568-26da-412b-a441-d5e2fad84478' #publiq-
 KEYCLOAK_PROD_SCOPE_UITPAS_ID='bcfb28cc-454f-488a-b080-6a29d9c0158e'#uitpas-scope
 
 SEARCH_BASE_URI=https://search-acc.uitdatabank.be/
-SEARCH_API_KEY=
+SEARCH_API_KEY=deb306a6-6f46-4c98-89ce-b03ec4fd11e2
