--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "guzzlehttp/oauth-subscriber": "^0.6",
         "inertiajs/inertia-laravel": "^1.0.0",
-        "laravel/framework": "^v10.13.5",
+        "laravel/framework": "^v11.22.0",
         "laravel/horizon": "^5.10",
         "laravel/nova": "^4.0",
         "laravel/tinker": "^2.7",
@@ -27,7 +27,7 @@
         "larastan/larastan": "^2.0",
         "laravel/sail": "^1.16",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.5",
+        "nunomaduro/collision": "^v8.4.0",
         "phpunit/phpunit": "^10.2.2",
         "publiq/php-cs-fixer-config": "^2.0",
         "spatie/laravel-ignition": "^2.1.3"
