add env variables so Command can access classes from the Service Container

--- a/.env.ci
+++ b/.env.ci
@@ -196,3 +196,12 @@ KEYCLOAK_PROD_SCOPE_UITPAS_ID='bcfb28cc-454f-488a-b080-6a29d9c0158e'#uitpas-scop
 
 SEARCH_BASE_URI=https://search-acc.uitdatabank.be/
 SEARCH_API_KEY=deb306a6-6f46-4c98-89ce-b03ec4fd11e2
+
+MAILJET_TRANSACTIONAL_EMAILS_ENABLED=true
+MAILJET_API_KEY='key'
+MAILJET_API_SECRET='secret'
+MAILJET_TEMPLATE_INTEGRATION_CREATED=1
+MAILJET_TEMPLATE_INTEGRATION_BLOCKED=2
+MAILJET_TEMPLATE_INTEGRATION_ACTIVATED=3
+MAILJET_TEMPLATE_INTEGRATION_ACTIVATION_REMINDER=4
+MAILJET_SANDBOX_MODE=true
