--- a/.env.ci
+++ b/.env.ci
@@ -38,6 +38,11 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+MAILJET_EXPIRATION_TIMER_ENTRY_API=6
+MAILJET_EXPIRATION_TIMER_SEARCH_API=6
+MAILJET_EXPIRATION_TIMER_UITPAS=6
+MAILJET_EXPIRATION_TIMER_WIDGETS=3
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
