--- a/.env.ci
+++ b/.env.ci
@@ -84,8 +84,8 @@ KEYCLOAK_LOGIN_ENABLED=true
 
 KEYCLOAK_LOGIN_DOMAIN=account-acc.uitid.be
 KEYCLOAK_LOGIN_MANAGEMENT_DOMAIN=account-acc.uitid.be
-KEYCLOAK_LOGIN_CLIENT_ID=
-KEYCLOAK_LOGIN_CLIENT_SECRET
+KEYCLOAK_LOGIN_CLIENT_ID=***
+KEYCLOAK_LOGIN_CLIENT_SECRET=***
 KEYCLOAK_LOGIN_REDIRECT_URI=http://localhost/auth/callback
 KEYCLOAK_LOGIN_PARAMETERS="locale=nl&referrer=publiq-platform&prompt=login&skip_verify_legacy=true&product_display_name=publiq platform"
 KEYCLOAK_LOGIN_REALM_NAME=
