--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
 # CODEOWNERS are automatically assigned as possible reviewers to new PRs.
 
 # Global owners (also need to be duplicated in later rules)
-* @LucWollants @JonasVHG @brampauwelyn @simon-debruijn @vhande @grubolsch @Anahkiasen @dev-publiq
+* @LucWollants @JonasVHG @brampauwelyn @simon-debruijn @vhande @grubolsch @Anahkiasen @publiq-dpb
 
 # Jenkins / deployment owners
 Gemfile* @willaerk @paulherbosch
