--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,11 +1,11 @@
 # CODEOWNERS are automatically assigned as possible reviewers to new PRs.
 
 # Global owners (also need to be duplicated in later rules)
-* @LucWollants @JonasVHG @brampauwelyn @vhande @grubolsch @Anahkiasen @publiq-dpb
+* @LucWollants @JonasVHG @brampauwelyn @vhande @grubolsch @publiq-dpb
 
 # Jenkins / deployment owners
-Gemfile* @willaerk @paulherbosch
-Jenkinsfile @willaerk @paulherbosch
-Rakefile @willaerk @paulherbosch
-lib/ @willaerk @paulherbosch
+Gemfile* @willaerk
+Jenkinsfile @willaerk
+Rakefile @willaerk
+lib/ @willaerk
 
