add feature flag

--- a/.env.ci
+++ b/.env.ci
@@ -178,3 +178,5 @@ MAILJET_TEMPLATE_INTEGRATION_ACTIVATION_REMINDER=4
 MAILJET_TEMPLATE_INTEGRATION_ACTIVATION_REQUEST=5
 MAILJET_TEMPLATE_INTEGRATION_DELETED=6
 MAILJET_SANDBOX_MODE=true
+
+COUPONS_ENABLED=true
