--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,10 @@
 services:
     laravel:
         build:
-            context: ./vendor/laravel/sail/runtimes/8.2
-            dockerfile: Dockerfile
+            context: .
+            dockerfile: docker/sail-8-2/Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
-        image: sail-8.2/app
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
