--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,11 +1,10 @@
 # CODEOWNERS are automatically assigned as possible reviewers to new PRs.
 
 # Global owners (also need to be duplicated in later rules)
-* @LucWollants @JonasVHG @brampauwelyn @vhande @grubolsch @publiq-dpb
+* @LucWollants @JonasVHG @brampauwelyn @vhande @grubolsch @publiq-dpb @bertramakers
 
 # Jenkins / deployment owners
 Gemfile* @willaerk
 Jenkinsfile @willaerk
 Rakefile @willaerk
 lib/ @willaerk
-
