--- a/.env.ci
+++ b/.env.ci
@@ -32,7 +32,7 @@ REDIS_PORT=6379
 MAIL_DSN="smtp://mailpit:1025"
 MAIL_FROM_ADDRESS="technical-support@publiq.be"
 MAIL_FROM_NAME="${APP_NAME}"
-MAILPIT_DSN="http://mailpit:8025"
+MAILPIT_API_URL="http://mailpit:8025"
 
 MAILJET_EXPIRATION_TIMER_ENTRY_API=6
 MAILJET_EXPIRATION_TIMER_SEARCH_API=6
