add rule to check if a handle method actually exists

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -16,3 +16,8 @@ parameters:
         - identifier: missingType.generics
         - identifier: missingType.iterableValue
 
+services:
+    -
+        class: App\PhpStan\EventListenerMethodExistsRule
+        tags:
+            - phpstan.rules.rule
