Strip out laravel-sail from container setup, first stab at running on Jenkins

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,56 @@
-# For more information: https://laravel.com/docs/sail
 services:
-    laravel:
-        build:
-            context: .
-            dockerfile: docker/sail-8-2/Dockerfile
-            args:
-                WWWGROUP: '${WWWGROUP}'
-        extra_hosts:
-            - 'host.docker.internal:host-gateway'
-        ports:
-            - '${APP_PORT:-80}:80'
-            - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
-        environment:
-            WWWUSER: '${WWWUSER}'
-            LARAVEL_SAIL: 1
-            XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
-            XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
+    platform-base-php-8-2:
+        build: docker/php8.2
         volumes:
-            - '.:/var/www/html'
-        networks:
-            - sail
+            - .:/var/www/html:cached
+        working_dir: /var/www/html
+        healthcheck:
+            test: curl http://127.0.0.1:80/
+            start_period: 5s
+            interval: 5s
+            timeout: 5s
+            retries: 10
         depends_on:
-            - mysql
-            - redis
-            - mailpit
+            mysql:
+                condition: service_healthy
+            redis:
+                condition: service_healthy
+            mailpit:
+                condition: service_healthy
+    platform:
+        container_name: platform.publiq
+        networks:
+            publiq-platform:
+                aliases:
+                    - platform.publiq.local
+        extends:
+            service: platform-base-php-8-2
+        ports:
+            - '8000:80'
+            - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
+#     platform-xdebug:
+#         container_name: platform-xdebug.publiq
+#         restart: no
+#         extends:
+#             service: platform-base-php-8-2
+#         profiles:
+#             - xdebug
+#         networks:
+#             publiq-platform:
+#                 aliases:
+#                     - platform-xdebug.publiq.local
+#         build:
+#             context: docker/php8.2
+#             args:
+#                 ENABLE_XDEBUG: "true"
+#         environment:
+#             XDEBUG_MODE: debug
+#             XDEBUG_CONFIG: client_host=host.docker.internal
+#         ports:
+#             - '8001:80'  # Explicitly override to port 8001
     mysql:
         image: 'mysql/mysql-server:8.0'
+        container_name: mysql.publiq
         ports:
             - '${FORWARD_DB_PORT:-3306}:3306'
         environment:
@@ -36,52 +61,64 @@ services:
             MYSQL_PASSWORD: '${DB_PASSWORD}'
             MYSQL_ALLOW_EMPTY_PASSWORD: 1
         volumes:
-            - 'sail-mysql:/var/lib/mysql'
-            - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
+            - 'platform-mysql:/var/lib/mysql'
+            - './docker/mysql:/docker-entrypoint-initdb.d'
         networks:
-            - sail
+            publiq-platform:
+                aliases:
+                    - mysql.publiq.local
         healthcheck:
             test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
             retries: 3
             timeout: 5s
     redis:
         image: 'redis:alpine'
+        container_name: redis.publiq
         ports:
             - '${FORWARD_REDIS_PORT:-6379}:6379'
         volumes:
-            - 'sail-redis:/data'
+            - 'platform-redis:/data'
         networks:
-            - sail
+            publiq-platform:
+                aliases:
+                    - redis.publiq.local
         healthcheck:
             test: ["CMD", "redis-cli", "ping"]
             retries: 3
             timeout: 5s
     mailpit:
         image: axllent/mailpit:latest
-        hostname: 'mailpit'
-        container_name: mailpit.ppf
+        container_name: mailpit.publiq
         restart: unless-stopped
         volumes:
-            - 'sail-mailpit:/data'
+            - 'platform-mailpit:/data'
         ports:
             - 8025:8025
             - 1025:1025
         networks:
-            sail:
+            publiq-platform:
                 aliases:
-                    - mailpit.ppf.local
+                    - mailpit.publiq.local
         environment:
             MP_MAX_MESSAGES: 5000
             MP_DATABASE: /data/mailpit.db
             MP_SMTP_AUTH_ACCEPT_ANY: 1
             MP_SMTP_AUTH_ALLOW_INSECURE: 1
+        healthcheck:
+            test: ["CMD", "wget", "--spider", "-q", "http://127.0.0.1:8025/api/v1/info"]
+            start_period: 5s
+            interval: 5s
+            timeout: 5s
+            retries: 10
+
 networks:
-    sail:
+    publiq-platform:
+        name: platform
         driver: bridge
 volumes:
-    sail-mysql:
+    platform-mysql:
         driver: local
-    sail-redis:
+    platform-redis:
         driver: local
-    sail-mailpit:
+    platform-mailpit:
         driver: local
