Increase limit on header size

--- a/docker/php8.2/Dockerfile
+++ b/docker/php8.2/Dockerfile
@@ -29,6 +29,7 @@ RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
 ENV APACHE_DOCUMENT_ROOT=/var/www/html/public
 RUN sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/sites-available/*.conf
 RUN sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf
+RUN echo 'LimitRequestFieldSize 32766' > /etc/apache/conf-enabled/limits.conf
 
 COPY xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
 
