Remove mailjet vars

--- a/.env.example
+++ b/.env.example
@@ -29,14 +29,20 @@ REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_DSN="smtp://mailpit:1025"
+MAIL_FROM_ADDRESS="technical-support@publiq.be"
 MAIL_FROM_NAME="${APP_NAME}"
+MAILPIT_API_URL="http://mailpit:8025"
+
+MAIL_EXPIRATION_TIMER_ENTRY_API=6
+MAIL_EXPIRATION_TIMER_SEARCH_API=6
+MAIL_EXPIRATION_TIMER_UITPAS=6
+MAIL_EXPIRATION_TIMER_WIDGETS=3
+
+MAIL_FINAL_EXPIRATION_TIMER_ENTRY_API=12
+MAIL_FINAL_EXPIRATION_TIMER_SEARCH_API=12
+MAIL_FINAL_EXPIRATION_TIMER_UITPAS=12
+MAIL_FINAL_EXPIRATION_TIMER_WIDGETS=12
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
