fix .env.ci file for mailpit

--- a/.env.ci
+++ b/.env.ci
@@ -29,10 +29,10 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DSN="smtp://mailpit:1025"
+MAIL_DSN="smtp://mailpit.services.publiq.be:1025"
 MAIL_FROM_ADDRESS="technical-support@publiq.be"
 MAIL_FROM_NAME="${APP_NAME}"
-MAILPIT_API_URL="http://mailpit:8025"
+MAILPIT_API_URL="https://mailpit.publiq.be"
 
 MAIL_EXPIRATION_TIMER_ENTRY_API=6
 MAIL_EXPIRATION_TIMER_SEARCH_API=6
