Expose on port 8000

--- a/.env.ci
+++ b/.env.ci
@@ -2,7 +2,8 @@ APP_NAME=publiq-platform
 APP_ENV=local
 APP_KEY=base64:5f6ivEq1QCl8ylgkFEzMpU6npqDi5tGYRuG1LYzilb4=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+APP_PORT=8000
 APP_SERVICE=laravel
 
 LOG_CHANNEL=stack
@@ -82,7 +83,7 @@ KEYCLOAK_LOGIN_DOMAIN=account-acc.uitid.be
 KEYCLOAK_LOGIN_MANAGEMENT_DOMAIN=account-acc.uitid.be
 KEYCLOAK_LOGIN_CLIENT_ID=***
 KEYCLOAK_LOGIN_CLIENT_SECRET=***
-KEYCLOAK_LOGIN_REDIRECT_URI=http://localhost/auth/callback
+KEYCLOAK_LOGIN_REDIRECT_URI=http://localhost:8000/auth/callback
 KEYCLOAK_LOGIN_PARAMETERS="locale=nl&referrer=publiq-platform&prompt=login&skip_verify_legacy=true&product_display_name=publiq platform"
 KEYCLOAK_LOGIN_REALM_NAME=
 
